--- a/demo2.html
+++ b/demo2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Demo</title>
+    <title>SVG Scroll – Demo 2</title>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Anna Traussnig">
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="demo2.css">
   </head>
 
     <div id="animation">
@@ -40,6 +40,6 @@
     </div>
 
     <script src="svg-scroll.js"></script>
-    <script src="demo.js"></script>
+    <script src="demo2.js"></script>
   </body>
 </html>
