--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SVG Scroll – Demo 2</title>
+    <title>SVG Scroll – Demo</title>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Anna Traussnig">
-    <link rel="stylesheet" href="demo2.css">
+    <link rel="stylesheet" href="main.css">
   </head>
 
     <div id="animation">
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <script src="svg-scroll.js"></script>
-    <script src="demo2.js"></script>
+    <script src="../../svg-scroll.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
