Add code snippets in demo

--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -10,7 +10,43 @@
     <link rel="stylesheet" href="main.css">
   </head>
 
+    <pre id="copy">
+      <code>
+        <span id="code-1">lightbulb.changeOnScroll([0.03, 0.04], 'r', [30, 18]);</span>
+        <span id="code-2">lightFitting.reveal([0.03, 0.07], [0, 1]);</span>
+        <span id="code-3">lightbulb.changeOnScroll([0.06, 0.08], 'r', [18, 21.6])</span>
+        <span id="code-4">topShadowStraight.changeOnScroll([0.07, 0.1], 'opacity', [0, 1]);</span>
+        <span id="code-5">bottomShadowStraight.changeOnScroll([0.07, 0.1], 'opacity', [0, 1]);</span>
+        <span id="code-6">lightbulb.changeOnScroll([0.1, 0.12], 'fill', ['#877F5C', '#F89406']);</span>
+        <span id="code-11">face.reveal([0.15, 0.27], [0, 0.8], true);</span>
+        <span id="code-7">lightbulbContainer.changeOnScroll([0.25, 0.35], 'top', ['-5vh', '30vh']);</span>
+        <span id="code-8">lightbulb.changeOnScroll([0.25, 0.27], 'fill', ['#F89406', '#000000']);</span>
+        <span id="code-9">topShadowStraight.changeOnScroll([0.26, 0.28], 'opacity', [1, 0]);</span>
+        <span id="code-10">bottomShadowStraight.changeOnScroll([0.26, 0.28], 'opacity', [1, 0]);</span>
+        <span id="code-14">lightbulb.changeOnScroll([0.3, 0.39], 'fill', ['#000000', '#F89406']);</span>
+        <span id="code-12">face.reveal([0.34, 0.39], [0.8, 1], true);</span>
+        <span id="code-15">topShadowTilted.changeOnScroll([0.38, 0.385], 'opacity', [0, 1]);</span>
+        <span id="code-16">bottomShadowTilted.changeOnScroll([0.38, 0.385], 'opacity', [0, 1]);</span>
+        <span id="code-13">face.reveal([0.39, 0.41], [1, 0.15]);</span>
+        <span id="code-17">hair1.reveal([0.43, 0.48], [0, 1]);</span>
+        <span id="code-18">hair2.reveal([0.48, 0.53], [0, 1], true);</span>
+        <span id="code-19">hair3.reveal([0.53, 0.58], [0, 1]);</span>
+        <span id="code-20">hair4.reveal([0.58, 0.63], [0, 1], true);</span>
+        <span id="code-21">face.changeOnScroll([0.65, 0.78], 'opacity', [1, 0]);</span>
+        <span id="code-22">faceUp.changeOnScroll([0.65, 0.72], 'opacity', [0, 1]);</span>
+        <span id="code-23">lightbulbContainer.changeOnScroll([0.68, 0.85], 'top', ['30vh', '-5vh']);</span>
+        <span id="code-24">topShadowTilted.changeOnScroll([0.68, 0.75], 'opacity', [1, 0]);</span>
+        <span id="code-25">bottomShadowTilted.changeOnScroll([0.68, 0.75], 'opacity', [1, 0]);</span>
+        <span id="code-26">lightFitting.reveal([0.82, 0.93], [1, 0]);</span>
+        <span id="code-27">hair1.changeOnScroll([0.85, 0.93], 'opacity', [1, 0]);</span>
+        <span id="code-28">hair2.changeOnScroll([0.85, 0.93], 'opacity', [1, 0]);</span>
+        <span id="code-29">hair3.changeOnScroll([0.85, 0.93], 'opacity', [1, 0]);</span>
+        <span id="code-30">hair4.changeOnScroll([0.85, 0.93], 'opacity', [1, 0]);</span>
+      </code>
+    </pre>
+
     <div id="animation">
+      <h1>Scroll Down!</h1>
       <div id="lightbulb-container">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43.19 153.78" >
           <circle id="lightbulb" cx="21.6" cy="132.595" r="30" style="fill:#000"/>
