--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -10,67 +10,35 @@
     <link rel="stylesheet" href="main.css">
   </head>
 
-    <pre id="copy">
-      <code>
-        <span id="code-1">lightbulb.changeOnScroll([0.03, 0.04], 'r', [30, 18]);</span>
-        <span id="code-2">lightFitting.reveal([0.03, 0.07], [0, 1]);</span>
-        <span id="code-3">lightbulb.changeOnScroll([0.06, 0.08], 'r', [18, 21.6])</span>
-        <span id="code-4">topShadowStraight.changeOnScroll([0.07, 0.1], 'opacity', [0, 1]);</span>
-        <span id="code-5">bottomShadowStraight.changeOnScroll([0.07, 0.1], 'opacity', [0, 1]);</span>
-        <span id="code-6">lightbulb.changeOnScroll([0.1, 0.12], 'fill', ['#877F5C', '#F89406']);</span>
-        <span id="code-11">face.reveal([0.15, 0.27], [0, 0.8], true);</span>
-        <span id="code-7">lightbulbContainer.changeOnScroll([0.25, 0.35], 'top', ['-5vh', '30vh']);</span>
-        <span id="code-8">lightbulb.changeOnScroll([0.25, 0.27], 'fill', ['#F89406', '#000000']);</span>
-        <span id="code-9">topShadowStraight.changeOnScroll([0.26, 0.28], 'opacity', [1, 0]);</span>
-        <span id="code-10">bottomShadowStraight.changeOnScroll([0.26, 0.28], 'opacity', [1, 0]);</span>
-        <span id="code-14">lightbulb.changeOnScroll([0.3, 0.39], 'fill', ['#000000', '#F89406']);</span>
-        <span id="code-12">face.reveal([0.34, 0.39], [0.8, 1], true);</span>
-        <span id="code-15">topShadowTilted.changeOnScroll([0.38, 0.385], 'opacity', [0, 1]);</span>
-        <span id="code-16">bottomShadowTilted.changeOnScroll([0.38, 0.385], 'opacity', [0, 1]);</span>
-        <span id="code-13">face.reveal([0.39, 0.41], [1, 0.15]);</span>
-        <span id="code-17">hair1.reveal([0.43, 0.48], [0, 1]);</span>
-        <span id="code-18">hair2.reveal([0.48, 0.53], [0, 1], true);</span>
-        <span id="code-19">hair3.reveal([0.53, 0.58], [0, 1]);</span>
-        <span id="code-20">hair4.reveal([0.58, 0.63], [0, 1], true);</span>
-        <span id="code-21">face.changeOnScroll([0.65, 0.78], 'opacity', [1, 0]);</span>
-        <span id="code-22">faceUp.changeOnScroll([0.65, 0.72], 'opacity', [0, 1]);</span>
-        <span id="code-23">lightbulbContainer.changeOnScroll([0.68, 0.85], 'top', ['30vh', '-5vh']);</span>
-        <span id="code-24">topShadowTilted.changeOnScroll([0.68, 0.75], 'opacity', [1, 0]);</span>
-        <span id="code-25">bottomShadowTilted.changeOnScroll([0.68, 0.75], 'opacity', [1, 0]);</span>
-        <span id="code-26">lightFitting.reveal([0.82, 0.93], [1, 0]);</span>
-        <span id="code-27">hair1.changeOnScroll([0.85, 0.93], 'opacity', [1, 0]);</span>
-        <span id="code-28">hair2.changeOnScroll([0.85, 0.93], 'opacity', [1, 0]);</span>
-        <span id="code-29">hair3.changeOnScroll([0.85, 0.93], 'opacity', [1, 0]);</span>
-        <span id="code-30">hair4.changeOnScroll([0.85, 0.93], 'opacity', [1, 0]);</span>
-      </code>
-    </pre>
+    <div id="copy">
+      <h1>Scroll Down :-)</h1>
+      <pre>
+        <code>
+          <span id="code-1">lightbulb.changeOnScroll([0, 0.1], 'r', [27, 18]);</span>
+          <span id="code-2">lightFitting.reveal([0, 0.2], [0, 1]);</span>
+          <span id="code-3">lightbulb.changeOnScroll([0.2, 0.25], 'r', [18, 21.6])</span>
+          <span id="code-4">lightbulb.changeOnScroll([0.2, 0.25], 'fill', ['#877F5C', '#F89406']);</span>
+          <span id="code-5">topShadow.changeOnScroll([0.25, 0.3], 'opacity', [0, 1]);</span>
+          <span id="code-6">bottomShadow.changeOnScroll([0.25, 0.3], 'opacity', [0, 1]);</span>
+          <span id="code-7">lightFitting.reveal([0.65, 1], [1, 0]);</span>
+          <span id="code-8">bottomShadow.changeOnScroll([0.7, 0.8], 'opacity', [1, 0]);</span>
+          <span id="code-9">topShadow.changeOnScroll([0.75, 0.85], 'opacity', [1, 0]);</span>
+        </code>
+      </pre>
+    </div>
 
     <div id="animation">
-      <h1>Scroll Down!</h1>
       <div id="lightbulb-container">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43.19 153.78" >
-          <circle id="lightbulb" cx="21.6" cy="132.595" r="30" style="fill:#000"/>
-          <path id="top-shadow-straight" d="M215.23,132.13c-0.17-4.45.23-9.24-3.46-17.73C224.06,120,223.6,130,223.59,130.78,221.88,131.23,216.86,132.28,215.23,132.13Z" transform="translate(-184.89)" style="fill:#f9eeb7" opacity="0"/>
-          <path id="bottom-shadow-straight" d="M215.3,137.38a25.71,25.71,0,0,1-5.58,12.28,17.09,17.09,0,0,0,3-.62c6.47-2,10.8-7.35,11-13a48.6,48.6,0,0,1-7.71,1.31Z" transform="translate(-184.89)" style="fill:#fcf4c3" opacity="0"/>
-          <path id="top-shadow-tilted" d="M202.72,114.79a46.94,46.94,0,0,1,10.65,6.44c0.94,0.76,1.84,1.55,2.71,2.36a21.57,21.57,0,0,0,1.42-5.46A18,18,0,0,0,202.72,114.79Z" transform="translate(-184.89)" style="fill:#f9eeb7" opacity="0"/>
-          <path id="bottom-shadow-tilted" d="M224.6,132.49a18,18,0,0,0-4-11.39,25.1,25.1,0,0,1-1.82,5.18,45.72,45.72,0,0,1,5.78,7.86C224.57,133.6,224.6,133.05,224.6,132.49Z" transform="translate(-184.89)" style="fill:#fcf4c3" opacity="0"/>
+          <circle id="lightbulb" cx="21.6" cy="132.595" r="27" style="fill:#000"/>
+          <path id="top-shadow" d="M215.23,132.13c-0.17-4.45.23-9.24-3.46-17.73C224.06,120,223.6,130,223.59,130.78,221.88,131.23,216.86,132.28,215.23,132.13Z" transform="translate(-184.89)" style="fill:#f9eeb7" opacity="0"/>
+          <path id="bottom-shadow" d="M215.3,137.38a25.71,25.71,0,0,1-5.58,12.28,17.09,17.09,0,0,0,3-.62c6.47-2,10.8-7.35,11-13a48.6,48.6,0,0,1-7.71,1.31Z" transform="translate(-184.89)" style="fill:#fcf4c3" opacity="0"/>
         </svg>
       </div>
 
       <div id="light-fitting-container">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 43.19 153.78">
           <path id="light-fitting" d="M204.91,0V82.23s0.39,7.52,3.74,8.53a0.91,0.91,0,0,0,1.13-.74l1-5.52a0.42,0.42,0,0,0-.5-0.48l-10.16,1.89v6.51L214,95.62a1.19,1.19,0,0,1,.77,2.1l-15.17,1.22c-3.7.51-5,5.8,0.46,4.42,20.32-5.1,23.67,2.42-2.74,5.16-3.87.4-2.61,5.13,0.46,4.25C232,103,213.69,125,199.62,111.64" transform="translate(-184.89)" style="fill:none;stroke:#b3c9bf;stroke-miterlimit:10;stroke-width:2px"/>
-        </svg>
-      </div>
-
-      <div id="face-container">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 375.03 308.79">
-          <path id="face" d="M101.73,267.41s36.39-16,73,11.22c17.4,13,32.41-3.63,39.73.74,4.93,2.95,3.39,15,7.41,18.19,8.38,6.63,11.78-2.92,13.79,1.11l2,4s4.76-3,6.94.66c3.15,5.26.08,5.75,5.46,8.32,12.12,0.36,13,12.45,7.81,19.16-14,18.13-41.85,27-53.33,63.76-7.25,23.21-3.19,44.37,13.84,61.14,16.39,16.14,47.36,9.86,98.89,17,27.23,3.78,36.52,15.75,9.14,15.75h3s-233.2-7.14-269.54,7,260.52-2.69,291.54,4.4-238.32-2.67-294.61,17.71,242.33-25.7,327.4,6.2S92.71,486.62,32.45,538.9s245.46-58.49,356.22,6.2" transform="translate(-23.17 -246.13)" style="fill:none;stroke:#b3c9bf;stroke-miterlimit:10;stroke-width:3.5px" opacity="1"/>
-          <path id="face-up" d="M78.66,280.71s30.58-25.43,73.3-9.28c20.29,7.67,30.17-12.4,38.4-10.2,5.55,1.48,7,14.77,12.12,15.45,7.38,1,8.28-7.83,12.06-5.37,1.2,0.78,2.33,1,3.7,1.81,0,0,5-3.21,8.13-.31,4.48,4.2,1.24,8.7,7.12,9.7,11.75-3,15.91,8.4,12.78,16.28-8.46,21.27-38,36.85-43.85,74.83-1.93,12.55-9.61,57.81,16,82.12" transform="translate(-23.17 -246.13)" style="fill:none;stroke:#b3c9bf;stroke-miterlimit:10;stroke-width:3.5px" opacity="0"/>
-          <path id="hair1" d="M84,276.95c17.27-19.46,47.48-28.5,90.6-3.91,6.64,3.79,15.07,1.36,14.59-8.12-0.44-8.49-14.82-10.59-11.87.31" transform="translate(-23.17 -246.13)" style="fill:none;stroke:#36d7b7;stroke-miterlimit:10;stroke-width:3px"/>
-          <path id="hair2" d="M34.2,438.12c-26,28.88,32.42,42.64,16.55-5.59-7.91-24-5.14-29.65.23-35,10-9.9,23.39,9.66,43.49,3.19,29.88-9.62,18.37-57.2-8.72-77-58.31-42.55-35.3-56.44-21.17-59" transform="translate(-23.17 -246.13)" style="fill:none;stroke:#81cfe0;stroke-miterlimit:10;stroke-width:3px"/>
-          <path id="hair3" d="M163.05,320.79c8.3,21.14-37.12,10.41-18.24-8.07,63.49-62.12-39.9-85.84-72.33-44.3" transform="translate(-23.17 -246.13)" style="fill:none;stroke:#1ba39c;stroke-miterlimit:10;stroke-width:3px"/>
-          <path id="hair4" d="M75.67,275.37c-93.93,43.37-22.51,173.18,32.63,138.35,5.65-3.57-1.93-11.2-6.81-6.61-8.87,8.35-3.67,22.3,10.52,29.59,16.78,8.61,27.68-8.2,39,5.6,4,4.86,5,10.53-1.87,22.72" transform="translate(-23.17 -246.13)" style="fill:none;stroke:#3498db;stroke-miterlimit:10;stroke-width:3px"/>
         </svg>
       </div>
     </div>
